--- a/oficina/templates/addpecas.html
+++ b/oficina/templates/addpecas.html
@@ -95,6 +95,7 @@
     .pecas,
     .servico,
     .clientes,
+    .mecanicos,
     .os {
       background-color: #23a2f6;
       color: #FFF;
@@ -117,8 +118,9 @@
     .pecas { top: 40%; transform: translate(-50%, -50%); }
     .servico { top: 50%; transform: translate(-50%, -50%); }
     .clientes { top: 60%; transform: translate(-50%, -50%); }
+    .mecanicos { top: 70%; transform: translate(-50%, -50%); }
     .os {
-      top: 75%;
+      top: 85%;
       height: 145px;
       line-height: 1.2; /* Adjusted for the increased height */
       transform: translate(-50%, -50%);
@@ -128,6 +130,7 @@
     .pecas:hover,
     .servico:hover,
     .clientes:hover,
+    .mecanicos:hover,
     .os:hover {
       background-color: #1845ad; /* Change the color on hover */
       transform: translate(-50%, -50%) scale(1.05); /* Add scale for a zoom effect on hover */
@@ -220,7 +223,8 @@
     <a href="{% url 'pecas' %}"><button type="submit" class="pecas">Peças</button></a>
     <a href="{% url 'servicos' %}"><button type="submit" class="servico">Serviços</button></a>
     <a href="{% url 'cliente' %}"><button type="submit" class="clientes">Clientes</button></a>
-    <a href="{% url 'home' %}"><button type="submit" class="os">Ordens<br>de<br>Serviço</button></a>
+    <a href="{% url 'mecanicos' %}"><button type="submit" class="mecanicos">Mecânicos</button></a>
+    <a href="{% url 'ordens' %}"><button type="submit" class="os">Ordens<br>de<br>Serviço</button></a>
   </div>
 
   <div class="clickable">
