--- a/oficina/templates/servicos.html
+++ b/oficina/templates/servicos.html
@@ -95,6 +95,7 @@
       .pecas,
       .servico,
       .clientes,
+      .mecanicos,
       .os {
         background-color: #23a2f6;
         color: #FFF;
@@ -118,8 +119,9 @@
       .pecas { top: 40%; transform: translate(-50%, -50%); }
       .servico { top: 50%; transform: translate(-50%, -50%); }
       .clientes { top: 60%; transform: translate(-50%, -50%); }
+      .mecanicos { top: 70%; transform: translate(-50%, -50%); }
       .os {
-        top: 75%;
+        top: 85%;
         height: 145px;
         line-height: 1.2; /* Adjusted for the increased height */
         transform: translate(-50%, -50%);
@@ -129,6 +131,7 @@
       .pecas:hover,
       .servico:hover,
       .clientes:hover,
+      .mecanicos:hover,
       .os:hover {
         background-color: #1845ad; /* Change the color on hover */
         transform: translate(-50%, -50%) scale(1.05); /* Add scale for a zoom effect on hover */
@@ -261,7 +264,8 @@
       <a href="{% url 'pecas' %}"><button type="submit" class="pecas">Peças</button>
       <a href="{% url 'servicos' %}"><button type="submit" class="servico">Serviços</button>
       <a href="{% url 'cliente' %}"><button type="submit" class="clientes">Clientes</button>
-      <a href="{% url 'home' %}"><button type="submit" class="os">Ordens<br>de<br>Serviço</button>
+      <a href="{% url 'mecanicos' %}"><button type="submit" class="mecanicos">Mecânicos</button></a>
+      <a href="{% url 'ordens' %}"><button type="submit" class="os">Ordens<br>de<br>Serviço</button>
     </div>
 
     <div class="container">
@@ -274,7 +278,7 @@
               <hr>
             </p>
             <p>
-              <span class="label" id="preco-label">Preço:</span>
+              <span class="label" id="preco-label">Serviço:</span>
               <span class="car-attribute" id="preco">{{ servico.peca }}</span>
               <hr>
             </p>
